Fix wrong padding in tabStrip. Closes telerik/kendo-ui-core#1965

--- a/styles/web/common/tabstrip.less
+++ b/styles/web/common/tabstrip.less
@@ -133,7 +133,7 @@
     border-style: solid;
     border-width: 1px;
     margin: 0 .286em .3em;
-    padding: .3em .92em;
+    padding: .92em;
     zoom: 1;
 }
 
